--- a/src/openexcel.ejs
+++ b/src/openexcel.ejs
@@ -12,6 +12,11 @@
   </head>
   <body>
     <div id="openexcel" ></div>
+    <!-- Set `__static` path to static files in production -->
+    <script>
+      if (process.env.NODE_ENV !== 'development') window.__static = require('path').join(__dirname, '/static').replace(/\\/g, '\\\\')
+    </script>
+
     <!-- webpack builds are automatically injected -->
   </body>
 </html>
