--- a/src/urldialog.ejs
+++ b/src/urldialog.ejs
@@ -11,6 +11,11 @@
   </head>
   <body>
     <div id="urldialog"></div>
+    <!-- Set `__static` path to static files in production -->
+    <script>
+      if (process.env.NODE_ENV !== 'development') window.__static = require('path').join(__dirname, '/static').replace(/\\/g, '\\\\')
+    </script>
+
     <!-- webpack builds are automatically injected -->
   </body>
 </html>
